--- a/insee-promotion-admin-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/me.css
@@ -674,3 +674,35 @@
 .match-detail {
     margin-top: 0;
 }
+
+.submit-img {
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.btn-check {
+    font-size: 20px;
+}
+
+.btn-reject {
+    padding-left: 20px;
+    font-size: 20px;
+}
+.tab-construction {
+    padding: 0;
+    list-style-type: none;
+    border-bottom: 1px solid #999;
+}
+
+.tab-construction li {
+    display: inline-block;
+    padding: 10px 0;
+    padding-right: 20px;
+    cursor: pointer;
+}
+
+.tab-construction li.active {
+    font-weight: 600;
+}
