--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -1458,3 +1458,77 @@ input[type="checkbox"], input[type="radio"] {
 .loca i {
     margin-right: 5px;
 }
+
+.lboard-container {
+    background: url(https://t-f51-zpg.zdn.vn/480/2573251076913042369/3810369e4ba680f8d9b7.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 220px;
+    position: relative;
+    background-size: 100% 100%;
+}
+
+.lboard-container img{
+    border-radius: 50%;
+}
+
+.lboard-container #top1 {
+    position: absolute;
+    border-radius: 50%;
+    width: 40px;
+    left: calc( 50% - 20px );
+    top: 95px;
+}
+
+.lboard-container #top2 {
+    position: absolute;
+    border-radius: 50%;
+    width: 40px;
+    left: calc( 65% - 20px );
+    top: 115px;
+}
+
+.lboard-container #top3 {
+    position: absolute;
+    border-radius: 50%;
+    width: 40px;
+    left: calc( 35% - 20px );
+    top: 130px;
+}
+
+.lboard-container #top4 {
+    position: absolute;
+    border-radius: 50%;
+    width: 40px;
+    left: calc( 80% - 20px );
+    top: 155px;
+}
+.lboard-container #top5 {
+    position: absolute;
+    border-radius: 50%;
+    width: 40px;
+    left: calc( 20% - 20px );
+    top: 165px;
+}
+
+.lboard-container div p {
+    font-size: 8px;
+    overflow: visible;
+    text-align: center;
+    color: #333;
+    font-weight: 600;
+    margin-top: 19px;
+    line-height: 10px;
+}
+
+.lboard-table td{
+    color: hsl(0,0%,0%);
+    font-size: 1.0rem;
+    padding: 5px 0px;
+}
+
+.lboard-table table th {
+    padding: 10px 0;
+    color: #333;
+    font-size: 1.0rem;
+}
