--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -952,6 +952,18 @@ input[type="checkbox"], input[type="radio"] {
     margin-right: calc((20% - 15px) / 2);
 }
 
+
+.modal-m {
+    background-color: #111111b5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 99999;
+}
+
+
 .modal-qrcode {
     background-color: #111111b5;
     position: fixed;
@@ -971,6 +983,20 @@ input[type="checkbox"], input[type="radio"] {
     transform: translate(-50%, -50%);
 }
 
+.btn-back-gray {
+    height: 100%;
+    border-radius: 0px;
+    width: 50%;
+    background-color: #868e96;
+}
+
+.btn-bar-send {
+    background-color: #fff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+}
 
 .lr-content {
     text-align: center;
